# StudentWork-MaxFlow

./: CMakeLists.txt  Makefile  README.md  main
INCLUDE/: graph.h  linkedlist.h  list.h  main.h
LIB/: README.md
SAVE/: forFord.txt  graph2.txt  graph3.txt  yop.txt
SRC/: graph.c  linkedlist.c  list.c  main.c
SRC/Biblialgo/: run_tests  test  test.c
SRC/Biblialgo/include/: array.h  list.h  str.h  tree.h
SRC/Biblialgo/lib/: array.c  list.c  str.c  tree.c
SRC/Biblialgo/tests/: test_array.cc
